Closed Bug 1030203 Opened 10 years ago Closed 10 years ago

PROTOCOL_ERROR when receiving PUSH_PROMISE frames if push is disabled

Categories

(Core :: Networking: HTTP, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: u408661, Assigned: u408661)

Details

(Whiteboard: [spdy][http2release])

Attachments

(1 file)

From bug 1026609 comment 11:

"right now we just rst_stream a push promise when we have push disabled.. but I would like to protocol_error the session when it can be done reliably. I only worry about race conditions - so we need to track a settings ack to set a bool when we get the ack for the disable push promise setting. can we add that into a separate bug but do it soon?"

This is that bug. Not marking this as http2release, since I don't think it should block release (even though I plan on doing it soon), but I'm fine if ends up being that way.
Whiteboard: [spdy] → [spdy][http2release]
Attached patch patchSplinter Review
Here you go.

https://tbpl.mozilla.org/?tree=Try&rev=73a08c2fcc06
Attachment #8446154 - Flags: review?(mcmanus)
Comment on attachment 8446154 [details] [diff] [review]
patch

Review of attachment 8446154 [details] [diff] [review]:
-----------------------------------------------------------------

thanks
Attachment #8446154 - Flags: review?(mcmanus) → review+
https://hg.mozilla.org/mozilla-central/rev/98bf99ea59ef
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: